fixed bounce. fixing survey scroll on mobile

--- a/frontend/src/Components/Survey/Survey.module.css
+++ b/frontend/src/Components/Survey/Survey.module.css
@@ -15,7 +15,7 @@
     background-color: #f8f0d3;
     height: 100%;
     overflow-y: scroll;
-    -webkit-overflow-scrolling: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .footer {
